# MPointers2.0.0.1

./: CMakeLists.txt  main.cpp  requirements.md
examples/: linked_list.cpp  linked_list.h  main.cpp
memory_manager/: garbage_collector.cpp  garbage_collector.h  main.cpp  memory_manager.cpp  memory_manager.h  socket_server.cpp  socket_server.h
mpointer/: mpointer.h  socket_client.cpp  socket_client.h
protocol/: message.cpp  message.h
terminal_app/: client_app.cpp  server_app.cpp
tests/: mpointer_test.cpp  mponter_test.cpp
